--- a/project/数据挖掘项目.md
+++ b/project/数据挖掘项目.md
@@ -1,7 +1,7 @@
 # 数据挖掘实战项目
 
 > 本文项目来源于 《Python数据分析与挖掘实战》 · 张良钧
-> 项目[数据集下载](http://www.tipdm.com/dldsjyy/index.jhtml) ，[泰迪云课堂](https://edu.tipdm.org/course/1310)
+> 项目来源于[泰迪科技](http://www.tipdm.com/dldsjyy/index.jhtml) ，[泰迪云课堂数据集下载](https://edu.tipdm.org/course/explore/python?filter%5Btype%5D=all&filter%5Bprice%5D=all&filter%5BcurrentLevelId%5D=all&orderBy=recommendedSeq)
 
 1. 电力窃漏电用户自动识别
 2. 航空公司客户价值分析
