关于感受野的理解与计算

--- a/cv/basic/感受野.md
+++ b/cv/basic/感受野.md
@@ -51,9 +51,9 @@
 
 通常上述公式求取的感受野通常很大,而实际的**有效感受野(Effective Receptive Field)**往往小于理论感受野,因为输入层中边缘点的使用次数明显比中间点要少,因此作出的贡献不同,所以经过多层的卷积堆叠后,输入层对于特征图点做出的贡献分布呈高斯分布形状
 
-在使用Anchor作为强先验区域的物体检测算法中,如Faster RCNN和SSD,如何设置Anchor的大小,都应该考虑感受野,尤其是有效感受野,过大或过小都不好,来自
+在使用Anchor作为强先验区域的物体检测算法中,如Faster RCNN和SSD,如何设置Anchor的大小,都应该考虑感受野,尤其是有效感受野,过大或过小都不好。
 
 ## 参考
 
 1. [关于感受野的理解与计算](https://www.jianshu.com/p/9997c6f5c01e)
-
+2. 书籍《深度学习之PyTorch物体检测实战》
